...
					}
					.onDelete(perform: self.delete)
				}
			}
			.navigationBarItems(
				leading: Button(action: showAbout) {
					Text("About")
				},
				trailing: Button(action: createHost) {
					Image(systemName: "plus")
				}
				.font(.system(size: 22))
				.buttonStyle(ActionStyleTrailing())
			)
			.navigationBarTitle(Text("Servers"), displayMode: .inline)
		}
		.navigationViewStyle(StackNavigationViewStyle())
		.sheet(isPresented: $presented, onDismiss: { self.presented=false}, content: {
			HostsViewSheetDelegate(model: self.model,
								   hostsModel: self.hostsModel,
								   presented: self.$presented,
...
