...
		NavigationView {
			PublishMessageFormView(message: self.model, type: self.$model.messageType)
				.font(.caption)
				.navigationBarTitle(Text("Publish message"))
				.navigationBarItems(
					leading: Button(action: self.cancel) {
						Text("Cancel")
						
					}.buttonStyle(ActionStyleT50()),
					trailing: Button(action: self.publish) {
						Text("Publish")
					}.buttonStyle(ActionStyleL50())
			)
			.keyboardResponsive()
		}
		.navigationViewStyle(StackNavigationViewStyle())
	}
...
