...
				}
			}
			.contextMenu {
				MenuButton(title: "Edit", systemImage: "pencil.circle", action: editHost)
				MenuButton(title: "Create new based on this", systemImage: "pencil.circle", action: cloneHost)
				if host.state != .disconnected {
					MenuButton(title: "Disconnect", systemImage: "stop.circle", action: disconnect)
				}
				else {
					MenuButton(title: "Connect", systemImage: "play.circle", action: connect)
				}
			}
		}.sheet(isPresented: $sheetPresented, onDismiss: cancelEditCreation, content: {
...
